--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.3",
     "express": "^4.15.2",
     "firebase-admin": "^4.2.1",
-    "ldapjs": "^1.0.1"
+    "ldapjs": "^1.0.1",
+    "morgan": "^1.8.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
